--- a/WireworldinJava/src/Wireworld/windows/JFrameViewer.form
+++ b/WireworldinJava/src/Wireworld/windows/JFrameViewer.form
@@ -268,7 +268,7 @@
 
       <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
       <SubComponents>
-        <Container class="windows.JPanelRealTimeVisualization" name="jPanelRealTimeVisualization1">
+        <Container class="Wireworld.windows.JPanelRealTimeVisualization" name="jPanelRealTimeVisualization1">
           <Properties>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
               <Dimension value="[1000, 236]"/>
