Last changes in code

--- a/WireworldinJava/src/Wireworld/windows/JFrameViewer.form
+++ b/WireworldinJava/src/Wireworld/windows/JFrameViewer.form
@@ -82,10 +82,7 @@
                           <EmptySpace min="0" pref="6" max="32767" attributes="0"/>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
-                          <Group type="103" groupAlignment="1" attributes="0">
-                              <Component id="jLabelCommunicats" alignment="0" max="32767" attributes="0"/>
-                              <Component id="jButtonMayBeMoreGenerations" max="32767" attributes="0"/>
-                          </Group>
+                          <Component id="jLabelCommunicats" max="32767" attributes="0"/>
                           <EmptySpace max="-2" attributes="0"/>
                       </Group>
                   </Group>
@@ -117,9 +114,7 @@
                   <Component id="jSeparator2" min="-2" pref="10" max="-2" attributes="0"/>
                   <EmptySpace max="-2" attributes="0"/>
                   <Component id="jButtonSaveGeneration" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace max="-2" attributes="0"/>
-                  <Component id="jButtonMayBeMoreGenerations" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace type="unrelated" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="50" max="-2" attributes="0"/>
                   <Component id="jLabelCommunicats" min="-2" pref="16" max="-2" attributes="0"/>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -203,11 +198,6 @@
               <Color blue="0" green="0" red="ff" type="rgb"/>
             </Property>
             <Property name="horizontalAlignment" type="int" value="0"/>
-          </Properties>
-        </Component>
-        <Component class="javax.swing.JButton" name="jButtonMayBeMoreGenerations">
-          <Properties>
-            <Property name="text" type="java.lang.String" value="More...?"/>
           </Properties>
         </Component>
       </SubComponents>
