--- a/WireworldinJava/src/Wireworld/windows/JFrameGenerateStart.form
+++ b/WireworldinJava/src/Wireworld/windows/JFrameGenerateStart.form
@@ -100,8 +100,11 @@
         <Component class="javax.swing.JTextField" name="jTextFieldX">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="50"/>
+            <Property name="text" type="java.lang.String" value="30"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldXActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
@@ -111,7 +114,7 @@
         <Component class="javax.swing.JTextField" name="jTextFieldY">
           <Properties>
             <Property name="horizontalAlignment" type="int" value="0"/>
-            <Property name="text" type="java.lang.String" value="50"/>
+            <Property name="text" type="java.lang.String" value="30"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldYActionPerformed"/>
