--- a/WireworldinJava/src/Wireworld/windows/JFrameSettings.form
+++ b/WireworldinJava/src/Wireworld/windows/JFrameSettings.form
@@ -153,6 +153,9 @@
             <Property name="horizontalAlignment" type="int" value="0"/>
             <Property name="text" type="java.lang.String" value="10"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextFieldFrameWidthActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
